# plamo-translate-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: convert_dataset.py  deploy.sh
src/plamo_translate/: __init__.py  main.py
src/plamo_translate/assets/: chat_template.jinja2
src/plamo_translate/clients/: translate.py
src/plamo_translate/servers/: utils.py
src/plamo_translate/servers/mlx/: server.py
tests/: test_cli.py
